# restic-backup-service

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  flake.nix  justfile  nixos-module.nix
.github/workflows/: ci.yml
src/: backup.rs  config.rs  errors.rs  helpers.rs  list.rs  main.rs  repository.rs  restore.rs  utils.rs
src/shared/: backup_workflow.rs  commands.rs  constants.rs  display.rs  mod.rs  operations.rs  paths.rs  restore_workflow.rs  ui.rs
