[package]
name = "restic-backup-service"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
colored = "2.1"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
dialoguer = "0.11"
indicatif = "0.17"
base64 = "0.22"
tempfile = "3.14"
hostname = "0.4"
